Load "PrintTextPlaceholder" and "PrintHiddenText" based on config

While looking at tdf#118263, I realized that the
"PrintTextPlaceholder" and "PrintHiddenText" attributes
are unconditionally taken from the settings.xml when opening a document.

All of the other options related to what content to print in
"File" -> "Printer Settings" -> "Options" are (not) taken from the
document based on whether the "Load user-specific settings
with the document" option is enabled or not (in "Tools" -> "Options"
-> "Load/Save" -> "General").

I didn't find a reason why those two should be handled differently,
so also add them to the list of options not to load from the document
if the above option is disabled.

Change-Id: Id7e4810c10f4809650eab1f20a2caaf6881bf23d
Reviewed-on: https://gerrit.libreoffice.org/82784
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit cef397d0e00fcc3ba7603b1b8e141a10479bb59e)